--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,21 @@
 version: "3"
 
 services:
+  db:
+    image: postgres:12
+    environment:
+      - POSTGRES_DB=nodejs-postgres-repo
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
   app:
     build:
       context: .
@@ -11,3 +26,12 @@ services:
       - ./src:/app/src
     ports:
       - "8000:8000"
+    depends_on: 
+      db:
+        condition: service_healthy
+    environment:
+      - PORT=4000
+      - POSTGRES_DB=nodejs-postgres-repo
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOST=db
