--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 PORT=4000
 
+POSTGRES_DB=nodejs-postgres-repo
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+DB_PORT=5432
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
