--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,12 @@ version: "3"
 services:
   db:
     image: postgres:12
-    environment:
-      - POSTGRES_DB=nodejs-postgres-repo
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    container_name: db
+    env_file: .env
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - ${DB_PORT}:5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 30s
@@ -22,16 +20,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: app
+    env_file: .env
     volumes:
       - ./src:/app/src
     ports:
-      - "8000:8000"
+      - ${PORT}:${PORT}
     depends_on: 
       db:
         condition: service_healthy
-    environment:
-      - PORT=4000
-      - POSTGRES_DB=nodejs-postgres-repo
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST=db
