--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     image: postgres:12
     container_name: db
     env_file: .env
+    restart: always
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
@@ -22,6 +23,7 @@ services:
       dockerfile: Dockerfile
     container_name: app
     env_file: .env
+    restart: always
     volumes:
       - ./src:/app/src
     ports:
