--- a/.env.docker
+++ b/.env.docker
@@ -1,9 +1,9 @@
 PORT=4000
 
-POSTGRES_DB=db
+POSTGRES_DB=nodejs-postgres-repo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=db
 DB_PORT=5432
 
 CRYPT_SALT=10
