--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-POSTGRES_DB=db
+POSTGRES_DB=nodejs-postgres-repo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=localhost
