--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
+# 'error', 'warn', 'log', 'verbose', 'debug'                             
 LOG_CONSOLE=false
 LOG_ERR_LEVEL=warn
 LOG_INFO_LEVEL=info
