--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "log-rotate": "nest start | rotate-logs --config=.info-log.js | rotate-logs --config=.error-log.js",
+    "start:log-rotate": "nest start | rotate-logs --config=.info-log.js | rotate-logs --config=.error-log.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config ./test/jest-e2e.json",
     "test:auth": "cross-env TEST_MODE=auth jest --config ./test/jest-e2e.json",
